--- a/frontend/src/scss/pages/_auth.scss
+++ b/frontend/src/scss/pages/_auth.scss
@@ -18,9 +18,13 @@
         &>* {
             font-size: 1.3rem;
             text-align: center;
-            padding: 1rem 0.2rem;
+            padding: 1rem 0.4rem;
             margin: 0.3rem auto;
             width: 100%;
+        }
+
+        & > input{
+            text-align: left;
         }
     }
 
@@ -85,4 +89,15 @@
             }
         }
     }
+}
+
+.form__wrapper{
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    background-color: rgba($color: #000000, $alpha: 0.3);
 }
